<resources>
    <string name="app_name">module_room</string>
    <string name="room_collect">收藏</string>
    <string name="room_get_integral">可领取</string>
    <string name="room_host">主持</string>
    <string name="room_boss">老板</string>
    <string name="room_up_mic">上麦</string>
    <string name="room_chat_hint">聊聊吧</string>
    <string name="room_gift_send_to">送给</string>
    <string name="room_gift_all">全选</string>
    <string name="room_gift_hot">热门</string>
    <string name="room_gift_magic">魔法</string>
    <string name="room_gift_special">特权</string>
    <string name="room_gift_package">背包</string>
    <string name="room_gift_recharge">充值</string>
    <string name="room_notice">房间公告</string>
    <string name="room_scale">最小化</string>
    <string name="room_quit">退出房间</string>
    <string name="room_share_title">分享到</string>
    <string name="room_share_wechat_friend">微信好友</string>
    <string name="room_share_wechat_circle">朋友圈</string>
    <string name="room_mic_queue_title_user">排队列表</string>
    <string name="room_mic_queue_title_manager">排麦管理</string>
    <string name="room_mic_queue_cancel">取消排队</string>
    <string name="room_mic_queue_clean">清空列表</string>
    <string name="room_mic_queue_invite">抱上麦</string>
    <string name="room_mic_queue_tips_user">正在排麦，等待管理员抱你上麦</string>
    <string name="room_ranking_list_day">日榜</string>
    <string name="room_ranking_list_week">周榜</string>
    <string name="room_ranking_list_month">月榜</string>
    <string name="room_user_on_mic">在麦上</string>
    <string name="room_chat_send">发送</string>
    <string name="room_prediction_title">积分预言</string>
    <string name="room_prediction_ranking">本场预言榜</string>
    <string name="room_prediction_join_tips">猜对预计获得(含投放积分)</string>
    <string name="room_prediction_report">举报</string>
    <string name="room_confirm_prediction">确定投入</string>
    <string name="room_prediction_menu_tips">玩法说明</string>
    <string name="room_prediction_menu_mine">我的预言</string>
    <string name="room_prediction_menu_square">预言广场</string>
    <string name="room_prediction_mine">我的预测</string>
    <string name="room_prediction_mine_integral">投放积分</string>
    <string name="room_prediction_mine_reward">奖励积分</string>
    <string name="room_prediction_create">添加竞猜</string>
    <string name="room_settings_get_integral">领取积分</string>
    <string name="room_settings_prediction">积分预言</string>
    <string name="room_settings_water">浇水信息</string>
    <string name="room_settings_gift_effect">礼物特效</string>
    <string name="room_settings_mute">静音</string>
    <string name="room_settings_report">举报</string>
    <string name="room_settings_manager">设置管理员</string>
    <string name="room_settings_income">魅力值</string>
    <string name="room_settings_clean_income">清除魅力值</string>
    <string name="room_settings_room_info">房间信息</string>
    <string name="room_settings_room_password">房间密码</string>
    <string name="room_settings_room_background">房间背景</string>
    <string name="room_settings_video_direction_vertical">竖屏游戏</string>
    <string name="room_settings_video_direction_horizontal">横屏游戏</string>
    <string name="room_settings_set_manager">设置管理员</string>
    <string name="room_mic_action_title_index">%1$s号麦</string>
    <string name="room_password_title">房间密码</string>
    <string name="room_password_tips">4位密码，支持数字，字母组合</string>
    <string name="room_password_submit">开启密码房</string>
    <string name="room_password_close">关闭密码房</string>
    <string name="room_gift_send">赠送 </string>
    <string name="room_setting_manager_title">设置管理</string>
    <string name="room_setting_manager_cancel">取消管理</string>
    <string name="room_setting_manager_set">设为管理</string>
    <string name="room_setting_invite_mic">抱上麦</string>
    <string name="room_search_user">昵称/ID</string>
    <string name="room_user_profile_chat">私信</string>
    <string name="room_user_profile_send_gift">送礼</string>
    <string name="room_user_profile_follow">关注</string>
    <string name="room_user_profile_untalk">禁言</string>
    <string name="room_user_profile_mute">禁麦</string>
    <string name="room_user_profile_kick_out">踢出</string>
    <string name="room_info_title">房间信息</string>
    <string name="room_info_change_poster">更换</string>
    <string name="room_chat_message_hint">多聊才能增进感情</string>
    <string name="room_name">房间名</string>
    <string name="room_cover">房间封面</string>
    <string name="room_info_submit">发布</string>
    <string name="room_queue_empty">暂无用户排麦</string>
    <string name="room_select_background_title">选择背景图</string>
    <string name="room_gift_pack_select_all">一键全选</string>
    <string name="room_gift_pack_select_all_cancel">取消全选</string>
    <string name="room_password_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="room_prediction_input_title">输入题目</string>
    <string name="room_prediction_title_hint">请输入竞猜标题</string>
    <string name="room_prediction_title_option">竞猜选项</string>
    <string name="room_prediction_input_option">请输入文字</string>
    <string name="room_prediction_title_valid_time">有效时间</string>
    <string name="room_prediction_add">发起预言</string>
    <string name="room_prediction_add_tips">截止时间前，奖励随双方积分数量自动调整；截止时间后，观众不会再参与竞猜</string>
    <string name="room_integral_title">看直播领积分</string>
    <string name="room_use_integral">使用积分</string>
    <string name="room_prediction_finish_bet">终止投注</string>
    <string name="room_prediction_settle_invalid">无效</string>
    <string name="room_prediction_settle_left_win">左胜</string>
    <string name="room_prediction_settle_right_win">右胜</string>
    <string name="room_prediction_delete">删除</string>
    <string name="room_prediction_again">再次发起</string>
    <string name="room_prediction_empty">还未发布任何预言内容</string>
    <string name="room_current">当前房间</string>
    <string name="room_prediction_ranking_title">房间积分排名</string>
    <string name="room_prediction_ranking_income">收益</string>
    <string name="room_prediction_ranking_finish">去预言</string>
    <string name="room_prediction_ranking_tips">在当前房间预言收益越高，排名越高</string>
    <string name="room_loading">正在进入房间...</string>
    <string name="room_rank_need_value">距上榜还需%1$s</string>
    <string name="room_ban_user">拉黑用户</string>
    <string name="room_ban_user_in_room">加入房间\n黑名单</string>
    <string name="room_report_user">举报用户</string>
    <string name="room_integral_result_title">积分礼盒</string>
    <string name="room_toast_kick_out_user">您被踢出房间15分钟</string>
    <string name="room_rank_rule_title">榜单规则</string>
    <string name="room_rank_rule_title_income">魅力榜积分</string>
    <string name="room_rank_rule_title_expend">贡献榜积分</string>
    <string name="room_rank_rule_content_income">收到礼物，1金币累计%1$s魅力值</string>
    <string name="room_gift_packet_empty">背包空空如也~</string>
    <string name="room_copy">复制</string>
    <string name="room_video_start">开始直播</string>
    <string name="room_video_stop">关闭直播</string>
    <string name="room_video_screen">手游直播</string>
    <string name="room_video_obs">OBS直播</string>
    <string name="room_video_screen_tips">开始直播后，观众会实时看到你手机上的游戏画面，或其他应用</string>
    <string name="room_video_screen_tips_start">录屏中，可切换到游戏界面进行直播啦～</string>
    <string name="room_no_livestream_tips">精彩还未开始，再看看别的吧~</string>
    <string name="room_video_mute">麦克风关闭，点击开启</string>
    <string name="room_video_un_mute">麦克风开启，点击关闭</string>
    <string name="room_setting_manager">管理权限</string>
    <string name="room_can_not_livestream_again">当前正在直播，不能重复开播！</string>
    <string name="room_message_notice">欢迎来到直播间！2098社交严禁未成年人直播或打赏。直播间内严禁出现违法违规、低俗色情、人身伤害等内容。如主播在直播过程中以不当方式诱导打赏、请谨慎判断。请大家注意财产安全，谨防网络诈骗。实际下载应用，请以明示信息为准。</string>
    <string name="room_pk_title">房间PK</string>
    <string name="room_pk_type">PK选择</string>
    <string name="room_start_pk">发起PK</string>
    <string name="room_pk_infighting">房内对战</string>
    <string name="room_pk_team_blue">蓝队</string>
    <string name="room_pk_team_red">红队</string>
    <string name="room_pk_rank_list_blue">蓝队贡献榜</string>
    <string name="room_pk_rank_list_red">红队贡献榜</string>
    <string name="room_chat_tab_all">全部</string>
    <string name="room_chat_tab_room">房间</string>
    <string name="room_chat_tab_lucky">幸运</string>
</resources>