<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="28dp"
    app:bl_corners_topRadius="12dp"
    app:bl_solid_color="@color/color_E6000000">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/room_mic_queue_title_user"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="@color/color_494B70"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_line">

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/room_mic_queue_tips_user"
            android:textColor="@color/color_80FFFFFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/tv_tips" />

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/CommonFullButton"
            android:background="@mipmap/common_button_bg"
            android:layout_marginTop="20dp"
            android:text="@string/room_mic_queue_cancel"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view" />

        <TextView
            android:id="@+id/tv_clean_all"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/room_mic_queue_clean"
            android:textColor="@color/color_6C74FB"
            android:textSize="16sp"
            android:visibility="invisible"
            app:bl_corners_radius="24dp"
            app:bl_solid_color="@color/color_FAFAFA"
            app:bl_stroke_color="@color/color_6C74FB"
            app:bl_stroke_width="1dp"
            app:layout_constraintEnd_toStartOf="@id/tv_invite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_cancel" />

        <TextView
            android:id="@+id/tv_invite"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/common_btn"
            android:gravity="center"
            android:text="@string/room_mic_queue_invite"
            android:textColor="@color/common_white"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_clean_all"
            app:layout_constraintTop_toTopOf="@id/tv_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/iv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:drawableTop="@mipmap/room_icon_queue_empty"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:text="@string/room_queue_empty"
        android:textColor="@color/color_949499"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

</androidx.constraintlayout.widget.ConstraintLayout>