<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bl_corners_topRadius="12dp"
        android:paddingBottom="56dp"
        app:bl_solid_color="@color/color_2B2244">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/room_share_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_share_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/color_80FFFFFF"
            android:gravity="center_horizontal"
            android:drawablePadding="8dp"
            android:layout_marginStart="78dp"
            android:layout_marginTop="31dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:drawableTop="@mipmap/room_icon_share_wechat_friend"
            android:text="@string/room_share_wechat_friend" />

        <TextView
            android:id="@+id/tv_share_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/color_80FFFFFF"
            android:gravity="center_horizontal"
            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="@id/tv_share_friend"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="78dp"
            android:drawableTop="@mipmap/room_icon_share_wechat_circle"
            android:text="@string/room_share_wechat_circle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>