<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="28dp"
    app:bl_corners_topRadius="12dp"
    app:bl_solid_color="@color/color_E6000000">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/room_mic_queue_title_manager"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="@color/color_494B70"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

    <TextView
        android:id="@+id/tv_clean_all"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/room_mic_queue_clean"
        android:textColor="@color/color_FFFD62"
        android:textSize="16sp"
        android:visibility="gone"
        app:bl_corners_radius="24dp"
        app:bl_stroke_color="@color/color_FFFD62"
        app:bl_stroke_width="1dp"
        app:layout_constraintEnd_toStartOf="@id/tv_invite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view" />

    <TextView
        android:id="@+id/tv_invite"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="31dp"
        android:background="@mipmap/room_bg_invite_mic_button"
        android:gravity="center"
        android:text="@string/room_mic_queue_invite"
        android:textColor="@color/color_FFFD62"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_clean_all"
        app:layout_constraintTop_toBottomOf="@id/recycler_view" />


    <ImageView
        android:id="@+id/iv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:src="@mipmap/common_icon_empty"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/room_queue_empty"
        android:visibility="gone"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_empty" />

</androidx.constraintlayout.widget.ConstraintLayout>