<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingBottom="24dp"
            android:background="@mipmap/room_bg_dialog_room_password">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/room_password_title"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@mipmap/common_icon_close_dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="40dp"
                android:background="@null"
                android:digits="@string/room_password_digits"
                android:gravity="center"
                android:maxLength="4"
                android:textColor="@color/color_6C74FB"
                android:textSize="20sp"
                app:bl_corners_radius="8dp"
                app:bl_solid_color="@color/white25"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/room_password_tips"
                android:textColor="@color/color_80FFFFFF"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_password" />

            <TextView
                android:id="@+id/tv_update_single"
                style="@style/RoomCommonFullButton"
                android:layout_width="167dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="5dp"
                android:text="@string/room_password_submit"
                android:visibility="gone"
                android:textColor="@color/color_FFFD62"
                android:background="@mipmap/common_btn_dialog_single"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tips" />


            <TextView
                android:id="@+id/tv_update"
                style="@style/RoomCommonFullButton"
                android:layout_width="0dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/color_FFFD62"
                android:background="@mipmap/common_btn_dialog_single"
                android:text="@string/room_password_submit"
                app:layout_constraintEnd_toStartOf="@id/tv_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tips" />

            <TextView
                android:id="@+id/tv_close"
                style="@style/RoomCommonNegativeButton"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="13dp"
                android:textColor="@color/color_FFFD62"
                android:background="@mipmap/common_btn_dialog_single"
                android:text="@string/room_password_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_update"
                app:layout_constraintTop_toBottomOf="@id/tv_tips" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>