<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:bl_corners_radius="8dp"
        app:bl_solid_color="@color/color_212121"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_report_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/room_report_user"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="66dp"
            android:layout_height="1dp"
            android:background="@color/color_1AE5E5E5"
            app:layout_constraintBottom_toTopOf="@id/tv_ban_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_ban_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/room_ban_user"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:id="@+id/view_line_bottom"
            android:layout_width="66dp"
            android:layout_height="1dp"
            android:background="@color/color_1AE5E5E5"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tv_ban_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_ban_user_in_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/room_ban_user_in_room"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/view_line" />

    </LinearLayout>

</FrameLayout>