<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:paddingBottom="24dp"
    app:bl_corners_radius="12dp"
    app:bl_gradient_angle="45"
    app:bl_gradient_endColor="#333169"
    app:bl_gradient_startColor="#7558AC">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:src="@mipmap/common_icon_close_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/room_rank_rule_title"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_rank_rule_title_income"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_desc_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="收到礼物，1金币累计1魅力值"
        android:textColor="@color/color_80FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_income"
        app:layout_constraintTop_toBottomOf="@id/tv_title_income" />


    <TextView
        android:id="@+id/tv_title_expend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/room_rank_rule_title_expend"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tv_desc_income"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_income" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="送出礼物，1金币累计1财富值"
        android:textColor="@color/color_80FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_expend"
        app:layout_constraintTop_toBottomOf="@id/tv_title_expend" />

</androidx.constraintlayout.widget.ConstraintLayout>
